--- a/verdant/package.json
+++ b/verdant/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-tabs": "^1.1.4",
     "@tailwindcss/cli": "^4.1.1",
     "@tailwindcss/vite": "^4.1.1",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -44,7 +45,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.1",
+    "tailwindcss": "^4.1.4",
     "vite": "^6.2.0"
   }
 }
