--- a/BE/package.json
+++ b/BE/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@prisma/client": "^6.3.0",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.5.0",
     "nodemailer": "^6.10.1"
   }
 }
