--- a/BE/package.json
+++ b/BE/package.json
@@ -16,7 +16,9 @@
   "dependencies": {
     "@prisma/client": "^6.3.0",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "nodemailer": "^6.10.1"
   }
 }
