--- a/verdant/package.json
+++ b/verdant/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
     "sonner": "^2.0.3",
+    "swiper": "^11.2.6",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
     "uuid": "^11.1.0"
